Basic training details page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer scroll-bottom-offset">
 
   <div class="footer-content">
     <div class="footer-brand">
