--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -260,3 +260,9 @@
 .btn-outline-white {
   @include button-outline-variant($btn-page-cta-color, $btn-page-cta-bg);
 }
+
+.affix {
+  position: fixed;
+  padding-top: 20px;
+  z-index: 10;
+}
