--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -25,7 +25,7 @@
   @extend %p-0;
 }
 
-.navbar-toggler[aria-expanded=true] {
+.navbar-toggler[aria-expanded=true], .close {
   .burger {
     span {
       background-color: transparent;
