Clean up training page

--- a/_includes/training.html
+++ b/_includes/training.html
@@ -11,5 +11,9 @@
             {{include.instructors}}
         </div>
     </div>
+    {% include training_cta.html
+        header = "Register for this course"
+        text = "Send us an email below to start the registration process"
+    %}
 </article>
     
