--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -8,6 +8,7 @@
 @import 'culture';
 @import 'policies';
 @import 'policy';
+@import 'training';
 @import 'hire_us';
 @import 'join';
 @import 'blog';
