--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -1,4 +1,4 @@
-<h2 id="join-open-positions">Open positions</h2>
+<h2 id="join-open-positions" class="header-display-3 mb-2 mt-5">Open positions</h2>
 
 {% if site.data.open_positions[0] %}
   <p>
@@ -8,17 +8,21 @@
   </p>
 
   <div class="open-positions-list">
-    <ul>
-      {% assign open_positions = site.data.open_positions | sort: 'order' %}
-      {% for open_position in open_positions %}
-        <li>
-          <a href="{{open_position.url}}" title="View job posting for {{open_position.title}}">
-            {{open_position.title}}
-          </a>
-          <p>{{open_position.location}}</p>
-        </li>
-      {% endfor %}
-    </ul>
+    {% assign open_positions = site.data.open_positions | sort: 'order' %}
+    {% for open_position in open_positions %}
+      <h3 class="header-display-4 mb-2 mt-3">{{open_position.name}}</h3>
+      {% assign positions = open_position.positions | sort: 'order' %}
+      <ul>
+        {% for position in positions %}
+          <li>
+            <a href="{{open_position.url}}" title="View job posting for {{position.title}}">
+              {{position.title}}
+            </a>
+            <p>{{position.location}}</p>
+          </li>
+        {% endfor %}
+      </ul>
+    {% endfor %}
   </div>
 {% else %}
   <p>
