--- a/_sass/_jumpnav.scss
+++ b/_sass/_jumpnav.scss
@@ -4,6 +4,13 @@
 
 .jumpnav {
   @extend %col-md-3;
+  @extend %col-lg-3;
+  display: flex;
+  flex-direction: column;
+
+  .nav {
+    width: 100%;
+  }
 }
 
 .jumpnav-content {
@@ -11,7 +18,7 @@
   @extend %col-md-9;
 }
 
-@include media-breakpoint-up(md) {
+@include media-breakpoint-up(sm) {
   .affix {
     position: fixed;
     padding-top: 20px;
@@ -19,7 +26,7 @@
   }
 }
  
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(sm) {
   .affix-top, .affix-bottom {
     visibility: hidden;
   }
