--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -50,6 +50,8 @@
 @mixin mb-10 { margin-bottom: 8rem !important; }
 @mixin ml-3 { margin-left: 1rem !important; }
 
+@mixin pt-3 { padding-top: 1.5rem !important; }
+@mixin pb-3 { padding-bottom: 1.5rem !important; }
 @mixin pt-5 { padding-top: 3rem !important; }
 @mixin pt-6 { padding-top: 4rem !important; }
 @mixin pb-6 { padding-bottom: 4rem !important; }
