Blockquote styling the same

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -300,3 +300,7 @@ $btn-share-color: $post-header-footer-color;
 $btn-share-bg: $white;
 $btn-share-border: $btn-share-color;
 $btn-share-active-color: $brand-primary;
+
+// Blockquote
+$blockquote-border-color: $sk-yellow;
+$blockquote-border-width: 0.5rem;
