Add sidebar to page

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@
 @import 'buttons';
 @import 'tables';
 @import 'images';
+@import 'sidenav';
 @import 'layout/manifest';
 @import 'pages/manifest';
 @import 'accordion';
