--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -1,8 +1,6 @@
 .page-ditap-content {
   .subnav-col {
-    flex: none;
-    margin-left: initial !important;
-    margin-right: initial !important;
+    margin-left: -15px !important;
   }
 }
 
