--- a/_sass/bootstrap/_buttons.scss
+++ b/_sass/bootstrap/_buttons.scss
@@ -67,7 +67,6 @@ fieldset[disabled] a.btn {
 }
 .btn-warning {
   @include button-variant($btn-warning-color, $btn-warning-bg, $btn-warning-border);
-  color: $black;
 }
 .btn-danger {
   @include button-variant($btn-danger-color, $btn-danger-bg, $btn-danger-border);
@@ -94,6 +93,10 @@ fieldset[disabled] a.btn {
 }
 .btn-outline-light {
   @include button-outline-variant($white);
+
+  &:hover {
+    background-color: transparent;
+  }
 }
 
 //
