--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,7 @@
 @import 'tables';
 @import 'images';
 @import 'sidenav';
+@import 'hero';
 @import 'layout/manifest';
 @import 'pages/manifest';
 @import 'accordion';
