--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -371,6 +371,10 @@ $btn-primary-color:              $white !default;
 $btn-primary-bg:                 $brand-primary !default;
 $btn-primary-border:             $btn-primary-bg !default;
 
+$btn-primary-dark-color:         $white !default;
+$btn-primary-dark-bg:            $brand-primary-dark !default;
+$btn-primary-dark-border:        $btn-primary-dark-bg !default;
+
 $btn-secondary-color:            $gray-dark !default;
 $btn-secondary-bg:               $white !default;
 $btn-secondary-border:           #ccc !default;
