--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -2,6 +2,31 @@
   .subnav-col {
     margin-left: -15px !important;
   }
+
+  h2 {
+    font-size: $font-size-h3;
+    margin-top: 3.5rem;
+  }
+
+  h3 {
+    font-size: $font-size-h4;
+  }
+
+  h2,
+  h3 {
+    + p {
+      margin-top: 0.75em;
+    }
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+
+  .sticky {
+    position: sticky;
+    top: 1rem;
+  }
 }
 
 .quote-container {
@@ -19,5 +44,49 @@
 
   &:after {
     box-shadow: 100px 0;
+  }
+}
+
+.text-grid {
+  > * {
+    margin-top: 2rem;
+  }
+
+  h3 {
+    font-size: 1rem;
+    letter-spacing: 0.05em;
+    line-height: 1.375;
+    text-transform: uppercase;
+  }
+
+  p {
+    font-size: 1rem;
+    margin-bottom: 0;
+
+    &:first-of-type {
+      // margin-top: 1em;
+    }
+  }
+}
+
+.quote-container {
+  line-height: 1.5;
+
+  .text-intro {
+    margin-top: 1em;
+  }
+}
+
+.text-intro {
+  font-size: $font-size-h4;
+}
+
+.quote-text {
+  font-size: 22px;
+}
+
+.image-list {
+  > div {
+    margin-top: 1.5rem;
   }
 }
