--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -4,12 +4,12 @@
   }
 
   h2 {
-    font-size: 32px;
+    font-size: 32px; // See if we should change to 28px or $font-size-xx-large
     margin-top: 3.5rem;
   }
 
   h3 {
-    font-size: $font-size-h4;
+    font-size: $font-size-x-large;
   }
 
   h2,
@@ -33,6 +33,14 @@
 
     @include media-breakpoint-up(lg) {
       height: 226px;
+    }
+  }
+
+  .accordion-card-body {
+    font-size: $font-size-small;
+
+    *:last-child {
+      margin-bottom: 0;
     }
   }
 }
@@ -63,14 +71,14 @@
   }
 
   h3 {
-    font-size: 1rem;
+    font-size: $font-size-small;
     letter-spacing: 0.05em;
     line-height: 1.375;
     text-transform: uppercase;
   }
 
   p {
-    font-size: 1rem;
+    font-size: $font-size-small;
     margin-bottom: 0;
 
     &:first-of-type {
@@ -88,7 +96,7 @@
 }
 
 .text-intro {
-  font-size: $font-size-h4;
+  font-size: $font-size-x-large;
   line-height: 1.5;
   
   h2 + & {
@@ -114,7 +122,7 @@
   border: 2px solid #f2f2f2;
 
   p {
-    font-size: 1rem;
+    font-size: $font-size-small;
     margin-top: 12px;
   }
 }
