--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -108,7 +108,12 @@
 }
 
 .text-intro {
-  font-size: $font-size-x-large;
+  font-size: $font-size-medium;
+
+  @include media-breakpoint-up(lg) {
+    font-size: $font-size-x-large;
+  }
+
   line-height: 1.5;
   
   h2 + & {
