Add link hover color

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -158,6 +158,14 @@ $outline-light: 2px solid #f2f2f2;
   }
 }
 
+.tuition-card-link {
+  color: $link-color;
+
+  &:hover {
+    color: $link-hover-color;
+  }
+}
+
 .tuition-card-content {
   padding: 1.25rem !important;
 }
