--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -2,8 +2,8 @@
   background: linear-gradient(67.15deg, #183751 -5.79%, #235384 107.23%), #162D44;
 
   .container {
-    padding-bottom: 55px;
-    padding-top: 55px;
+    padding-bottom: 56px; // Is there a spacing variable we can use?
+    padding-top: 56px;
   }
 
   .btn-warning {
