Add hover style to hero outline button

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -9,6 +9,12 @@
   .btn-warning {
     font-weight: $font-weight-bold;
   }
+
+  .btn-outline-light {
+    &:hover {
+      color: $brand-primary-dark;
+    }
+  }
 }
 
 .hero-heading {
