Adjust font size of class note

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -167,7 +167,7 @@ $outline-light: 2px solid #f2f2f2;
   }
 
   .tuition-card-note {
-    font-size: $font-size-xxx-small;
+    font-size: $font-size-xx-small;
   }
 }
 
