Update class card

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -162,13 +162,13 @@ $outline-light: 2px solid #f2f2f2;
   }
 
   p {
-    font-size: $font-size-small;
-    margin-top: 12px;
+    font-size: $font-size-xx-small;
+    margin-top: 4px;
   }
 
-  .tuition-card-note {
-    font-size: $font-size-xx-small;
-  }
+  // .tuition-card-note {
+  //   font-size: $font-size-xx-small;
+  // }
 }
 
 .tuition-card-link {
