--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -26,5 +26,6 @@
   color: $white;
   font-size: $font-size-large;
   line-height: 1.5;
-  margin-top: 1em;
+  margin-bottom: 0;
+  margin-top: 1.5em;
 }
