--- a/_sass/layout/_cta.scss
+++ b/_sass/layout/_cta.scss
@@ -5,7 +5,7 @@
   @extend %py-4;
   @extend %py-md-5;
   color: $page-cta-color;
-  background-image: $page-cta-bg-color;
+  background: $page-cta-bg-color;
 }
 
 .page-subfooter-content {
