--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -51,7 +51,7 @@
   h3 {
     @extend %card-title;
     @extend %text-uppercase;
-    color: $brand-primary;
+    color: $brand-primary-dark;
     font-size: $font-size-small;
   }
 
