--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -105,13 +105,13 @@
 
   a {
     @extend %badge;
-    @extend %badge-default;
+    background-color: $brand-primary;
   }
 
   a.tag-badge {
     &:hover,
     &:focus {
-      background-color: $brand-primary;
+      background-color: $link-hover-color;
     }
   }
 }
