Update case study team members accordion - profile links to new link style

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -280,8 +280,8 @@ $btn-page-cta-color: $white;
 $btn-page-cta-bg: $brand-primary;
 
 // Project case studies
-$project-aside-link-color: $body-color;
-$project-aside-link-hover-color: $brand-primary;
+$project-aside-link-color: $brand-primary;
+$project-aside-link-hover-color: $link-hover-color;
 $project-aside-link-border: 1px dotted $project-aside-link-color;
 $project-aside-link-border-hover: 1px solid $project-aside-link-hover-color;
 
