Bring down opacity to 60% for hero sketches

--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -6,7 +6,7 @@
   @extend %jumbotron;
   @extend %jumbotron-fluid;
   @extend %mb-0;
-  background-image: url('../img/government-digitization.svg');
+  background-image: url('../img/government-digitization.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
