revert to old imgs; add links to DITAP page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
               <li><a href="/services/digital-procurement/">Digital Procurement</a></li>
               <li><a href="/services/digital-transformation/">Digital Transformation</a></li>
               <li><a href="/services/microconsulting/">Microconsulting</a></li>
+              <li><a href="/services/ditap/">DITAP Training</a></li>
             </ul>
           </div>
         </div>
