Reduce value card line width and change color back to light blue

--- a/_sass/pages/_culture.scss
+++ b/_sass/pages/_culture.scss
@@ -29,7 +29,7 @@
   @extend %card;
   @extend %text-left;
   border: 0;
-  border-left: 14px solid $brand-primary;
+  border-left: 8px solid $brand-primary-light;
   border-radius: 0;
   height: 100%;
 }
