--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,8 +21,8 @@
             <a class="dropdown-item" href="/services/digital-services-delivery/">Digital Services Delivery</a>
             <a class="dropdown-item" href="/services/digital-procurement/">Digital Procurement</a>
             <a class="dropdown-item" href="/services/digital-transformation/">Digital Transformation</a>
-<!--             <a class="dropdown-item" href="/services/microconsulting/">Microconsulting</a>
-            <a class="dropdown-item" href="/services/ditap/">DITAP Training</a> -->
+            <a class="dropdown-item" href="/services/microconsulting/">Microconsulting</a>
+            <a class="dropdown-item" href="/services/ditap/">DITAP Training</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/services/">All Services</a>
           </div>
