Update img sizes

--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -50,6 +50,11 @@
       width: auto;      
     }
 
+    .image-list-md {
+      max-height: 203px;
+      width: auto;      
+    }
+
     .image-list-img {
       text-align: center;
     }
