--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -45,13 +45,8 @@
   }
 
   .image-list {
-    .image-list-sm {
+    img {
       max-height: 183px;
-      width: auto;      
-    }
-
-    .image-list-md {
-      max-height: 203px;
       width: auto;      
     }
 
