Add focus style to dropdown nav

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -127,6 +127,13 @@
   }
 }
 
+// Restore dropdown focus browser default style
+.dropdown-toggle {
+  &:focus {
+    outline: 5px auto -webkit-focus-ring-color;
+  }
+}
+
 @include media-breakpoint-down(md) {
   .nav-link {
     span {
