--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
         <li class="nav-item"><a class="nav-link" href="/about/"><span>About</span></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Services
+            <span>Services</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/services/">All Services</a>
