--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -111,7 +111,7 @@ h1 {
   ol,
   ul {
     li::before {
-      color: $gray-lighter;
+      color: $gray-light;
       position: absolute;
       left: 0;
       top: 0;
