Add scrollspy data attributes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body>
+  <body data-spy="scroll" data-target="#sidenav" data-offset="0">
     <a href="#content" class="sr-only sr-only-focusable">Skip to Main Content</a>
 
     {% include header.html %}
