Adds active support for subpages and dropdowns

--- a/_sass/bootstrap/_dropdown.scss
+++ b/_sass/bootstrap/_dropdown.scss
@@ -98,6 +98,10 @@
       background-image: none;
     }
   }
+
+  &[aria-current] {
+    font-weight: 700;
+  }
 }
 
 // Open state for the dropdown
