--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -51,5 +51,10 @@
   .btn {
     flex: 0 0 50%;
     margin-top: 0;
+
+    @include media-breakpoint-up(md) {
+      font-size: 20px;
+      padding: 0.75rem 1.5rem;
+    }
   }
 }
