Change sticky footer bg to dark gray

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -31,7 +31,7 @@
 }
 
 .hero-btn-group {
-  background: $brand-primary;
+  background: $gray-dark;
   bottom: 0;
   box-shadow: 0 0 9px rgba(0, 0, 0, .5);
   display: flex;
