--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -48,12 +48,21 @@
     display: inline-block;
     padding: 0;
     position: relative;
+    text-align: left;
+  }
+
+  .hero-btn-wrapper {
+    flex: 0 0 50%;
+
+    @include media-breakpoint-up(md) {
+      display: inline-block;
+    }
   }
 
   .btn {
-    flex: 0 0 50%;
     font-size: 14px;
     margin-top: 0;
+    width: 100%;
 
     @include media-breakpoint-up(md) {
       font-size: 20px;
