--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -25,6 +25,11 @@
     border-bottom: none !important;
     margin-bottom: 0 !important;
     color: $white;
+    position: relative;
+
+    > div:first-child {
+      padding-right: 24px;
+    }
   }
 
   .accordion-icon-plus {
