--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -13,6 +13,7 @@
 }
 
 .hero-container  {
+  max-width: 1140px;
   padding-bottom: 56px; // Is there a spacing variable we can use?
   padding-top: 56px;
 }
