restyle DITAP apply page

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -281,7 +281,7 @@
   @extend %mx-auto;
 }
 
-%readability-column {
+%readability-col {
   @extend %col-sm-11;
   @extend %col-md-10;
   @extend %col-lg-6;
