--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -8,9 +8,9 @@
 @import 'culture';
 @import 'policies';
 @import 'policy';
-@import 'hire_us';
 @import 'join';
 @import 'ditap';
+@import 'form_pages';
 @import 'blog';
 @import 'post';
 @import 'filter';
