--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -4,7 +4,7 @@
       <div class="testimonial-col">
         <blockquote>
           <p class="testimonial-quote">
-            You would be hard pressed to find a greater assemblage of digital talent.
+            You'd be hard pressed to find a greater assemblage of digital talent.
           </p>
 
           <cite class="testimonial-cite">
