Make DITAP hero h1 responsive

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -20,7 +20,10 @@
 
 .hero-heading {
   color: $white;
-  font-size: $font-size-h2;
+
+  @include media-breakpoint-up(sm) {
+    font-size: $font-size-h2;
+  }
 }
 
 .hero-content {
