--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -20,6 +20,7 @@
 
 .hero-heading {
   color: $white;
+  font-size: $font-size-h1 * .60;
 
   @include media-breakpoint-up(sm) {
     font-size: $font-size-h2;
