--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -216,3 +216,24 @@ $outline-light: 2px solid #f2f2f2;
 .form-small {
   max-width: 392px;
 }
+
+.class-heading {
+  display: inline-block;
+}
+
+.class-spots {
+  display: inline-block;
+
+  span {
+    padding: 2px 6px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    position: relative;
+    font-weight: bold;
+    font-size: 12px;
+    margin-left: 10px;
+    vertical-align: top;
+    border-radius: 3px;
+    background: $sk-yellow;
+  }
+}
