--- a/_sass/pages/_ditap.scss
+++ b/_sass/pages/_ditap.scss
@@ -222,7 +222,13 @@ $outline-light: 2px solid #f2f2f2;
 }
 
 .class-spots {
-  display: inline-block;
+  display: block;
+  margin-top: 2px;
+
+  @include media-breakpoint-up(sm) {
+    display: inline-block;
+    margin-top: 0;
+  }
 
   span {
     padding: 2px 6px;
@@ -231,9 +237,12 @@ $outline-light: 2px solid #f2f2f2;
     position: relative;
     font-weight: bold;
     font-size: 12px;
-    margin-left: 10px;
     vertical-align: top;
     border-radius: 3px;
     background: $sk-yellow;
+
+    @include media-breakpoint-up(sm) {
+      margin-left: 10px;
+    }
   }
 }
