Change height to padding bottom

--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -19,7 +19,7 @@
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 80%;
-  height: 780px;
+  padding-bottom: 56.25%;
 }
 
 .landing-jumbotron-content {
