--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -31,7 +31,7 @@
 
 .page-hero-3 {
   .landing-jumbotron {
-    background-image: url('../img/hero-1c.jpg');
+    background-image: url('../img/hero-1d.jpg');
     background-color: $brand-primary;
     background-size: 90%;
   }
